--- a/action-reaction/action.yml
+++ b/action-reaction/action.yml
@@ -2,11 +2,11 @@ name: "Reactions Counter"
 description: "Count reactions on comments in pull requests for voting"
 author: "natkozak0@gmail.com"
 
-inputs:
-  REACTION_NUMBER:
-    description: "Number of reactions"
-    required: true
-    default: 0
+# inputs:
+#   REACTION_NUMBER:
+#     description: "Number of reactions"
+#     required: true
+#     default: 0
 
 runs:
   using: "docker"
