Cause action to work on test branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,11 @@ name: A workflow for my Hello World file
 on: pull_request
   branches:
     - main
+    - action-reaction
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1 
-      # - uses: ./action-reaction
-        # with:
-        #   REACTION_NUMBER: 0
+      - uses: ./action-reaction
