--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: A workflow for my Hello World file
-on: pull_request
-  branches:
-    - main
-    - action-reaction
+on: 
+  pull_request:
+    branches: [ main, action-reaction]
 
 jobs:
   build:
