--- a/action-reaction/Dockerfile
+++ b/action-reaction/Dockerfile
@@ -2,4 +2,6 @@ FROM debian:9.5-slim
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+RUN apt-get update && apt-get install -y \
+    curl \
 ENTRYPOINT ["/entrypoint.sh"]
