Test reformat curl install

--- a/action-reaction/Dockerfile
+++ b/action-reaction/Dockerfile
@@ -4,4 +4,5 @@ ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 RUN apt-get update && apt-get install -y \
     curl \
+    apt-transport-https \
 ENTRYPOINT ["/entrypoint.sh"]
