--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: A workflow for my Hello World file
-on: 
-  pull_request:
-    branches: [ main, action-reaction ]
+on: push
 
 jobs:
   build:
